cmake_minimum_required(VERSION 3.27)
project(AdventOfCode2023)

set(CMAKE_CXX_STANDARD 23)

add_executable(
        Day_1a cpp/day_01a.cpp
        cpp/day_01a.cpp
)

add_executable(
        Day_1b cpp/day_01b.cpp
        cpp/day_01b.cpp
)

add_executable(
        Day_2a cpp/day_02a.cpp
        cpp/day_02a.cpp
)

add_executable(
        Day_2b cpp/day_02b.cpp
        cpp/day_02b.cpp
)